--- a/src/components/calendar/calendar.css
+++ b/src/components/calendar/calendar.css
@@ -1,4 +1,6 @@
 .rightContainer {
+  max-width: 590px;
+  min-width: 400px;
   color: grey;
   border-left: 5px solid black;
 }
@@ -55,6 +57,7 @@
 }
 
 .monthYear {
+  flex-basis: 200px;
   font-weight: 700;
   line-height: 2;
   font-size: 1.5em;
